// - Replace the Unreleased section header with actual release version
// - Prepend a new Unreleased section header

== Unreleased

* While preserving our existing `-X` command line interface, add a more conventional main command line interface to support leiningen (and potentially Windows) users https://github.com/lread/test-doc-blocks/issues/8[#8]
* Bump deps
* Internal test-doc-blocks developer facing:
** Migrate from `depstar` to `tools.build`

== v1.0.146-alpha

* Add support for `(refer-clojure ...)` in doc blocks https://github.com/lread/test-doc-blocks/issues/5[#5]
* Bump rewrite-clj to v1.0.682-alpha

https://github.com/lread/test-doc-blocks/compare/v1.0.137-alpha\...v1.0.146-alpha[Gritty details of changes for this release]

== v1.0.137-alpha

* Freshen up docs, deps and internal scripts

https://github.com/lread/test-doc-blocks/compare/v1.0.129-alpha\...v1.0.137-alpha[Gritty details of changes for this release]

== v1.0.129-alpha

* Maintenance release - bump deps

https://github.com/lread/test-doc-blocks/compare/v1.0.124-alpha\...v1.0.129-alpha[Gritty details of changes for this release]

== v1.0.124-alpha

* Maintenance release - deps, docs and ops updates

https://github.com/lread/test-doc-blocks/compare/v1.0.116-alpha\...v1.0.124-alpha[Gritty details of changes for this release]

== v1.0.116-alpha

* Switch to `com.github.lread/test-doc-blocks` for deployment artifact name as per new security measures at clojars.

https://github.com/lread/test-doc-blocks/compare/v1.0.114-alpha\...v1.0.116-alpha[Gritty details of changes for this release]

== v1.0.114-alpha

* Ensure test-doc-blocks works on Windows

https://github.com/lread/test-doc-blocks/compare/v1.0.107-alpha\...v1.0.114-alpha[Gritty details of changes for this release]

== v1.0.107-alpha

* Support generating tests from CommonMark code blocks found in Clojure source docstrings
